--- a/css/style.css
+++ b/css/style.css
@@ -1,87 +1,334 @@
 BODY {
-  background: #282931;
-  -webkit-font-smoothing: antialiased;
-  font-family: 'Varela Round', sans-serif;
-  height: 100%;
+    background: #282931;
+    -webkit-font-smoothing: antialiased;
+    font-family: 'Varela Round', sans-serif;
+    height: 100%;
+    margin: 0px;
 }
 
 canvas {
-  height: 100vh;
-  z-index: -10;
-  position: fixed;
-  top: 0px;
+    height: 100vh;
+    z-index: -10;
+    position: fixed;
+    top: 0px;
 }
 
 a {
-  color: #bbbbc4;
-  text-decoration: none;
-  -webkit-transition: .5s;
-  transition: .5s;
+    color: #e6e6e6;
+    text-decoration: none;
+    -o-transition: .5s;
+    -ms-transition: .5s;
+    -moz-transition: .5s;
+    -webkit-transition: .5s;
+    transition: .5s;
 }
 
 a:hover {
-  color: #fc3565;
+    color: #fc3565;
 }
 
 h1 {
-  color: #fc3565;
-  padding-bottom: 0px;
-  margin-bottom: 1%;
+    color: #fc3565;
+    padding-bottom: 0px;
+    margin-bottom: 1%;
 }
 
 h2 {
-  color: #555560;
-  font-size: 3rem;
-  font-weight: bold;
-  margin: 0px;
-  padding: 0px;
+    color: white;
+    font-size: 3rem;
+    font-weight: bold;
+    margin: 0px;
+    padding: 0px;
+}
+
+h3 {
+    color: white;
+    font-size: 2rem;
+    font-weight: bold;
+    margin: 0px;
+    padding: 0px;
+}
+
+pre,
+blockquote {
+    background: #42434a;
+    padding: 2rem;
+    color: white;
+    border-radius: 0.2rem;
+}
+
+p {
+    color: #e6e6e6;
+    font-size: 1.7rem;
+}
+
+label {
+    color: #ffffff;
+    display: block;
+    font-size: 0.8em;
+    font-weight: 600;
+    letter-spacing: 0.25em;
+    margin: 0 0 1em 0;
+    text-transform: uppercase;
+}
+
+
+
+input,
+textarea {
+    font-size: 17pt;
+    font-weight: 300;
+    letter-spacing: 0.025em;
+    line-height: 1.65;
+}
+
+input[type=email],
+input[type=number],
+input[type=password],
+input[type=search],
+input[type=tel],
+input[type=text],
+input[type=url],
+textarea {
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    -ms-appearance: none;
+    appearance: none;
+    background: rgba(212, 212, 255, 0.035);
+    border: none;
+    border-radius: 0;
+    color: inherit;
+    display: block;
+    outline: 0;
+    padding: 0 1em;
+    text-decoration: none;
+    width: 100%;
+    color: #FFF;
+}
+
+input[type="text"]:focus,
+input[type="password"]:focus,
+input[type="email"]:focus,
+input[type="tel"]:focus,
+input[type="search"]:focus,
+input[type="url"]:focus,
+select:focus,
+textarea:focus {
+    border-color: #f76f91;
+    box-shadow: 0 0 0 2px #f76f91;
+}
+
+input[type="text"],
+input[type="password"],
+input[type="email"],
+input[type="tel"],
+input[type="search"],
+input[type="url"],
+select {
+    height: 2.75em;
+}
+
+span.new {
+    background-color: #fc3565;
+    font-weight: bold;
+    padding: 0.2rem;
+    margin-left: 0.4rem;
+    color: white;
+}
+
+#message {
+    min-width: 100%;
+    min-height: 25rem;
+}
+
+.logo a {
+    color: #FFF;
 }
 
 .logo {
-  font-family: 'Monoton', cursive;
-  color: white;
-  font-size: 8rem;
+    font-family: 'Monoton', cursive;
+    color: white;
+    font-size: 8rem;
 }
 
-.top {
-  padding-bottom: 5rem;
+.row.top p {
+    color: #e6e6e6;
+    margin-top: 1rem;
+    text-align: justify;
+    font-size: 1.7rem;
+}
+
+.contact {
+    display: inline-block;
 }
 
 .pulled {}
 
+.pulled ul {
+    padding-top: 2rem;
+}
+
 .pulled ul li {
-  list-style: none;
-  margin-right: 2rem;
-  font-size: 1.8rem;
+    list-style: none;
+    margin-right: 2rem;
+    font-size: 1.8rem;
 }
 
-.pulled h1 {
-  color: white;
-  font-size: 3rem;
+.pulled h2 {
+    color: #DEDEDE;
+    font-size: 3rem;
 }
 
-.pulled ul li span{
-  font-size:1.2rem;
+.pulled ul li span {
+    font-size: 1.2rem;
 }
 
-.footer{
-padding-top:5rem;
+.smallLogo {
+    font-size: 3.5rem;
 }
 
-.footer p{
-  color:white;
-  font-size:1.2rem;
+.services h2 {
+    color: #fc3565;
+    padding-bottom: 1.5rem;
+    font-size: 2rem;
 }
 
-.visit{
-  color:white;
-  font-size:12px;
-  background:#32333a;;
-  width:146px;
-  padding:6px;
-  border-radius:10px;
-  position:fixed;
-  right:20px;
+.services .title {
+    color: #DEDEDE;
+    font-size: 3rem;
+}
+
+.u-full-width {
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.cta {
+    text-align: center;
+}
+
+.cta p {
+    color: white;
+    font-size: 2rem;
+    display: inline-block;
+    margin: 1.5rem;
+    text-align: center;
+}
+
+.footer {}
+
+.footer p {
+    color: white;
+    font-size: 1rem;
+    margin: 0px;
+    padding: 0px;
+}
+
+.footerLinks {
+    margin: 0px;
+    padding: 0px;
+}
+
+.footerLinks li {
+    display: inline-block;
+    color: white;
+    margin: 10px;
+}
+
+.button {
+    box-sizing: border-box !important;
+    background-color: transparent!important;
+    border: 0!important;
+    border-radius: 0!important;
+    box-shadow: inset 0 0 0 2px #ffffff!important;
+    color: #ffffff!important;
+    cursor: pointer!important;
+    display: inline-block!important;
+    font-size: 0.8em!important;
+    font-weight: 600!important;
+    height: 3.5em!important;
+    letter-spacing: 0.25em!important;
+    line-height: 3.5em!important;
+    padding: 0 1.75em!important;
+    text-align: center!important;
+    text-decoration: none!important;
+    text-transform: uppercase!important;
+    white-space: nowrap!important;
+    margin-bottom: 2rem!important;
+}
+
+.button:hover {
+    border-bottom-color: transparent!important;
+    color: #f76f91 !important;
+    box-shadow: inset 0 0 0 2px #f76f91!important;
+}
+
+.button:focus {
+    color: #fff!important;
+}
+
+.services .code {
+    background: #9bf1ff;
+}
+
+.services .cms {
+    background: #7C75B2;
+}
+
+.services .seo {
+    background: #C2A9B0;
+}
+
+.services .social {
+    background: #DEB68F;
+}
+
+.services p {
+    color: white;
+}
+
+.related {
+    padding: 2rem;
+    color: white;
+    text-align: center;
+}
+
+.related a {
+    display: block;
+}
+
+.related a:first-child {
+    display: none;
+}
+
+.social {
+    padding: 2rem;
+    background: #2e303a;
+    color: white;
+    text-align: center;
+}
+
+.social a {
+    margin-left: 2rem;
+}
+
+article p {
+    text-align: left!important;
+}
+
+article .posted {
+    font-size: 1.4rem!important;
+    margin: 0rem;
+    color: white!important;
+}
+
+article a {
+    border-bottom: 1px #fc3565 dashed;
+}
+
+article li {
+    color: #e6e6e6;
+    margin: 2rem;
 }
 
 
@@ -100,18 +347,28 @@ padding-top:5rem;
 
 /* Larger than tablet */
 
-@media (min-width: 750px) {}
+@media (min-width: 750px) {
+    .services {
+        width: 100%;
+        max-width: 100%;
+    }
+    .services .column {
+        margin: 0;
+    }
+}
 
 
 /* Larger than desktop */
 
-@media (min-width: 1000px) {}
+@media (min-width: 1000px) {
+    .footer {}
+}
 
 
 /* Larger than Desktop HD */
 
 @media (min-width: 1200px) {
-  h1 {
-    font-size: 4rem;
-  }
+    h1 {
+        font-size: 4rem;
+    }
 }
